# NetworksLab2017

./: .gitignore  README.md
DistTest/testClient/: main.cpp
DistTest/testClientUDP/: main.cpp  main.cpp.cpp
DistTest/testServer/: CMakeLists.txt  main.cpp  registered.txt  test1.txt  testServer.depend  testServer.layout
DistTest/testServerUDP/: CMakeLists.txt  list_tests.txt  main.cpp  server.out  test1.txt
report/: report.aux  report.synctex(busy)  report.tex  settings.tex  titlepage.tex
report/listings/: mult.c  tcp_client_linux.c  tcp_client_win.c  tcp_server_linux.c  tcp_server_win.c  theory.cpp
tcp_template/DistTest/oneMore/oneMore/: main.cpp  oneMore.cbp  oneMore.depend
tcp_template/DistTest/testClient/: main.cpp
tcp_template/DistTest/testServer/: main.cpp  registered.txt  testServer.depend  testServer.layout
tcp_template/DistTest/testServer/testServer/: main.cpp  registered.txt  testServer.cbp  testServer.depend  testServer.layout
tcp_template/client_linux/: main.c
tcp_template/client_udp/: CMakeLists.txt  main.c
tcp_template/client_udp_win/: CMakeLists.txt  main.c
tcp_template/client_win/: CMakeLists.txt  main.c
tcp_template/multiserver/: CMakeLists.txt  main.c  pthread.h  sched.h  semaphore.h
tcp_template/server_linux/: main.c
tcp_template/server_udp/: CMakeLists.txt  main.c
tcp_template/server_udp_win/: CMakeLists.txt  main.c
tcp_template/server_win/: CMakeLists.txt  main.c
